@@ -1,6 +1,6 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/context_class.R, R/count_method.R,
-%   R/enrich_method.R
+%   R/enrich_method.R, R/trim_method.R
 \docType{class}
 \name{context-class}
 \alias{context-class}
@@ -12,14 +12,21 @@
 \alias{summary,context-method}
 \alias{head,context-method}
 \alias{as.DataTables,context-method}
+\alias{sample,kwic-method}
 \alias{count,context-method}
 \alias{enrich,context-method}
-\title{S4 context class}
+\alias{trim,context-method}
+\title{Context class.}
 \usage{
+\S4method{sample}{kwic}(x, size)
+
 \S4method{count}{context}(.Object)
 
 \S4method{enrich}{context}(.Object, sAttribute = NULL, pAttribute = NULL,
   id2str = FALSE, verbose = TRUE)
+
+\S4method{trim}{context}(object, sAttribute = NULL, verbose = TRUE,
+  progress = TRUE)
 }
 \arguments{
 \item{.Object}{object}
@@ -33,7 +40,7 @@
 \item{verbose}{logical, whether to be talkative}
 }
 \description{
-class to organize information of context analysis
+Class to organize information of context analysis.
 }
 \details{
 Objects of the class \code{context} include a \code{data.table} in the
@@ -46,11 +53,11 @@ in the "cpos"-slot of a \code{context}-object.
 \section{Slots}{
 
 \describe{
-\item{\code{query}}{Object of class \code{"character"} node examined}
+\item{\code{query}}{Object of class \code{"character"}, the query/node examined}
 
 \item{\code{count}}{Object of class \code{"numeric"} number of hits}
 
-\item{\code{partition}}{Object of class \code{"partition"} the partition the analysis is based on}
+\item{\code{partition}}{Object of class \code{"partition"}, the partition the context object is based on}
 
 \item{\code{partitionSize}}{Object of class \code{"numeric"} the size of the partition}
 
