@@ -9,6 +9,8 @@ v0.7.4
 * bug removed for partitionBundle,character-class, and performance improved
 * Improved explanation of the installation procedure for Mac in the package vignette
 * for context-method: param sAttribute working again to check boundaries of match regions
+* sample-method for objects of class kwic and context
+* kwic, cpos, and context method will accept queries of length > 1
 
 v0.7.3
 * new installed.corpora() convenience function to list all data packages with corpora
